--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,138 @@
-#root {
-  max-width: 1280px;
+*{
+  box-sizing: border-box;
+}
+
+ul{
+  list-style: none;
+}
+
+main{
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  max-width: 300px;
+  width: 100%;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+form{
+  display: flex;
+  gap: 5px;
+  width: 100%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.formInput{
+  flex-grow: 1;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.header{
+  margin-bottom: 20px;
 }
 
-.card {
-  padding: 2em;
+.list{
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
-.read-the-docs {
+.listItem{
+  display: flex;
+justify-content: space-between;
+align-items: center;
+}
+
+.listCheckbox{
+  padding: 0;
+  margin: 0;
+  width: 40px;
+  height: 40px;
+}
+
+.listCheckbox {
+  width: 20px;
+  height: 20px;
+  margin-inline: 10px;
+  cursor: pointer;
+
+  appearance: none;
+  -webkit-appearance: none;
+  background-color: #555;
+  border: 2px solid #777;
+  border-radius: 4px;
+  position: relative;
+  transition: all 0.3s ease;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.listCheckbox:hover {
+  background-color: #666;
+  border-color: #888;
+
+}
+
+.listCheckbox:checked {
+  background-color: #4CAF50;
+  border-color: #4CAF50;
+}
+
+.listCheckbox:checked::after {
+  content: "";
+  display: block;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+  position: absolute;
+  top: 1px;
+}
+
+.listCheckbox:active {
+  transform: scale(0.9);
+}
+
+.listDelete {
+  width: 40px;
+  height: 40px;
   color: #888;
+  font-weight: 600;
+  font-size: 16px;
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  transition: all 0.3s ease;
 }
+
+.listDelete:hover{
+  color:#d10000;
+  transform: scale(1.3);
+}
+
+.listDelete:active{
+  transform: scale(0.9)
+}
+
+.listCheckbox:checked + p{
+  text-decoration: line-through;
+  color:#9a9a9a
+}
+
+.listItem > p{
+  margin: 0;
+  overflow: hidden;
+}
+
+.listItem:nth-child(odd){
+  background-color: #323232;
+}
+
+.listItem:nth-child(even){
+  background-color: #474747;
+}
+
