--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
-*{
+* {
   box-sizing: border-box;
 }
 
-ul{
+ul {
   list-style: none;
 }
 
-main{
+main {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -17,48 +17,74 @@ main{
   width: 100%;
 }
 
-form{
+form {
   display: flex;
   gap: 10px;
   width: 100%;
 }
 
-.formInput{
+
+.formInput {
   flex-grow: 1;
-  border: none;
+  border: 2px solid #555; 
+  border-radius: 6px; 
   outline: none;
   font-size: 24px;
-  padding: 6px 10px;
+  padding: 10px 15px; 
+  background-color: #333;
+  color: #fff;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-.formButton{
+.formInput:focus {
+  border-color: #cfcfcf; 
+  box-shadow: 0 0 8px rgba(255, 255, 255, 0.5); 
+}
+
+
+.formButton {
   cursor: pointer;
   border: none;
   outline: none;
-  
+  font-size: 18px;
+  padding: 12px 20px;
+  border-radius: 6px; 
+  background-color: #777777;
+  color: #fff; 
+  font-weight: bold;
+  transition: background-color 0.3s ease, transform 0.3s ease; 
 }
 
-.header{
+.formButton:hover, .formButton:focus-visible {
+  background-color: #43a047; 
+  transform: scale(1.05);
+}
+
+.formButton:active {
+  transform: scale(0.95);
+}
+
+.header {
   margin-top: 10px;
   margin-bottom: 100px;
 }
 
-.list{
+.list {
   margin: 0;
   padding: 0;
   width: 100%;
 }
 
-.listItem{
+.listItem {
   display: flex;
-justify-content: space-between;
-align-items: center;
-/* max-height: 60px; */
+  justify-content: space-between;
+  align-items: center;
+  /* max-height: 60px; */
 }
 
 .listCheckbox {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   margin-inline: 10px;
   cursor: pointer;
 
@@ -79,24 +105,23 @@ align-items: center;
 .listCheckbox:hover {
   background-color: #666;
   border-color: #888;
-
 }
 
 .listCheckbox:checked {
-  background-color: #4CAF50;
-  border-color: #4CAF50;
+  background-color: #4caf50;
+  border-color: #4caf50;
 }
 
 .listCheckbox:checked::after {
-  content: "";
+  content: '';
   display: block;
   width: 10px;
   height: 20px;
   border: solid white;
-  border-width: 0 4px 4px 0;
+  border-width: 0 3px 3px 0;
   transform: rotate(45deg);
   position: absolute;
-  top: 4px;
+  top: 1px;
 }
 
 .listCheckbox:active {
@@ -118,31 +143,30 @@ align-items: center;
   flex-shrink: 0;
 }
 
-.listDelete:hover{
-  color:#d10000;
+.listDelete:hover {
+  color: #d10000;
   transform: scale(1.3);
 }
 
-.listDelete:active{
-  transform: scale(0.9)
+.listDelete:active {
+  transform: scale(0.9);
 }
 
-.listCheckbox:checked + p{
+.listCheckbox:checked + p {
   text-decoration: line-through;
-  color:#9a9a9a
+  color: #9a9a9a;
 }
 
-.listItem > p{
+.listItem > p {
   margin: 0;
   overflow-x: auto;
   white-space: nowrap;
 }
 
-.listItem:nth-child(odd){
+.listItem:nth-child(odd) {
   background-color: #323232;
 }
 
-.listItem:nth-child(even){
+.listItem:nth-child(even) {
   background-color: #474747;
 }
-
